# twitter_crawling_be

./: .env  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
app/: config.py  crawling.py  logic.py  main.py  schemas.py
