[tool.poetry]
name = "twitter-crawling-be"
version = "0.1.0"
description = ""
authors = ["Iman <imannurohman1@gmail.com>"]
readme = "README.md"
packages = [{include = "twitter_crawling_be"}]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.1"
fastapi = "^0.87.0"
pandas = "^1.5.2"
nltk = "^3.7"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
sastrawi = "^1.0.1"
wordcloud = "^1.8.2.2"
aiofiles = "^22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
